Fixing banner on mobile

--- a/assets/styles/homepage.css
+++ b/assets/styles/homepage.css
@@ -575,15 +575,22 @@ body {
 	top: 0;
 	width: 100%;
 	position: fixed;
-	height: 400px;
+	height: clamp(250px, 45vw, 400px);
 	z-index: -10;
 	overflow: hidden;
 }
 
 .banner {
         width: 100%;
-        height: 100%;
+        height: clamp(250px, 45vw, 400px);
         object-fit: cover;
+}
+
+@media (max-width: 768px) {
+	.banner {
+		object-fit: cover;
+		background-color: black;
+	}
 }
 
 /* Dark overlay */
